<resources>
    <string name="app_name">animations</string>
    <string name="action_settings">Settings</string>
    <string name="raw_anim">Raw</string>
    <string name="obj_anim">Smooth Move</string>
    <string name="acc_anim">Accelerate out</string>
    <string name="decel_anim">Decelerate in</string>
    <string name="bounce_anim">Bounce</string>
    <string name="rotate_anim">Rotate</string>
    <string name="moverotate_anim">Move and Rotate</string>
    <string name="color_anim">Animate Color Change</string>
    <string name="movecolor_anim">Move and Recolor</string>
    <string name="moverotatecolor_anim">Move and Rotate, Then Color</string>
    <string name="teleport">Teleport</string>
    <string name="shrink">Shrink</string>
    <string name="load_color">Load Color</string>
</resources>
